z-index fix for autocomplete result list

--- a/source/css/scss/objects/_lists.scss
+++ b/source/css/scss/objects/_lists.scss
@@ -738,6 +738,7 @@ ol {
 */
 .a-autocomplete-container {
   position: absolute;
+  z-index: 10;
   display: block;
   width: 100%;
   margin-top: -2px;
